--- a/latex/document.tex
+++ b/latex/document.tex
@@ -278,7 +278,7 @@ First step in connecting the TCS34725 RGB colour sensor and the L3GD20H 3-axis g
 	\end{subfigure}
 \end{figure}
 
-For development we used Eclipse Oxygen from October 2017. We set up remote debugging and cross compiling according to instructions for lab document. We used direct connection over Ethernet for remote debugging when both devices were in 192.168.1.0 subnet. Developing and remote debugging in Eclipse Oxygen was not without complications and is definitely not stable and reliable.
+For development in C we used Eclipse Oxygen from October 2017. We set up remote debugging and cross compiling according to instructions for lab document. We used direct connection over Ethernet for remote debugging when both devices were in 192.168.1.0 subnet. Developing and remote debugging in Eclipse Oxygen was not without complications and is definitely not stable and reliable.
 
 Project, application, presentation and this document, is available in Git repository \url{https://github.com/multiflexi/adamadrina.git}
 
