--- a/latex/presentation.tex
+++ b/latex/presentation.tex
@@ -26,7 +26,7 @@
 	\frametitle{Tasks}
 		\begin{itemize}
 			\item \textbf{Compile embedded Linux for BeagleBone Black}
-			\item \textbf{Develop application which uses}
+			\item \textbf{Develop C application which uses}
 			\begin{itemize}
 				\item \textbf{TCS34725 RGB colour sensor}
 				\item \textbf{L3GD20H 3-axis gyroscope}
