--- a/latex/document.tex
+++ b/latex/document.tex
@@ -265,7 +265,7 @@ iface eth0 inet static
 \end{lstlisting} 
  We had to rewrite the filesystem several times because it was corrupted.
 
-\chapter{Application and sensors}
+\chapter{Application development and connecting of sensors}
 First step in connecting the TCS34725 RGB colour sensor and the L3GD20H 3-axis gyroscope was soldiering them onto HAT for practical reasons. Sensors use ground aka pins 1 and 2, 3.3 V from pins 3 and 4 for power, pins 17 and 19 for I\textsuperscript{2}C clock line and pins 18 and 20 for I\textsuperscript{2}C data line.
 \begin{figure}[!ht]
 	\caption{BeagleBone Black with HAT with sensors}
