Andreas unnecessary edits

--- a/latex/presentation.tex
+++ b/latex/presentation.tex
@@ -151,16 +151,14 @@ Open a new \textbf{C/C++ Remote Application} and the code of the program to be d
 	\begin{figure}[!ht]
 		\includegraphics[width=0.88\textwidth]{{"img/table1"}.png}
 	\end{figure}
-\end{frame}
-\begin{frame}
-\frametitle{Implementation - RGB sensor}
 \begin{itemize}
-\item Example of configuration used in the code
+	\item Example of configuration used in the code
 \end{itemize}
-	\begin{figure}[!ht]
-	\includegraphics[width=0.88\textwidth]{{"img/code1"}.png}
+\begin{figure}[!ht]
+	\includegraphics[width=0.68\textwidth]{{"img/code1"}.png}
 \end{figure}
 \end{frame}
+
 \begin{frame}
 \frametitle{Implementation - RGB sensor}
 \begin{itemize}
@@ -170,9 +168,6 @@ Open a new \textbf{C/C++ Remote Application} and the code of the program to be d
 	\includegraphics[width=0.88\textwidth]{{"img/table2"}.png}
 		\includegraphics[width=0.28\textwidth]{{"img/code2"}.png}
 \end{figure}
-\end{frame}
-\begin{frame}
-\frametitle{Implementation - RGB sensor}
 \begin{itemize}
 	\item Time Register
 \end{itemize}
@@ -181,6 +176,7 @@ Open a new \textbf{C/C++ Remote Application} and the code of the program to be d
 	\includegraphics[width=0.28\textwidth]{{"img/code3"}.png}
 \end{figure}
 \end{frame}
+
 \begin{frame}
 \frametitle{Implementation - Gyroscope}
 \begin{itemize}
@@ -189,9 +185,6 @@ Open a new \textbf{C/C++ Remote Application} and the code of the program to be d
 \begin{figure}[!ht]
 	\includegraphics[width=0.88\textwidth]{{"img/text1"}.png}
 \end{figure}
-\end{frame}
-\begin{frame}
-\frametitle{Implementation - Gyroscope}
 \begin{itemize}
 	\item Example of configuration used in the code
 \end{itemize}
@@ -199,22 +192,24 @@ Open a new \textbf{C/C++ Remote Application} and the code of the program to be d
 	\includegraphics[width=0.88\textwidth]{{"img/code4"}.png}
 \end{figure}
 \end{frame}
+
 \begin{frame}
 \frametitle{Implementation - Gyroscope}
 \begin{itemize}
 	\item Axis control register
 \end{itemize}
+\vspace{-10px}
 \begin{figure}[!ht]
 	\includegraphics[width=0.88\textwidth]{{"img/table4"}.png}
 \end{figure}
-\end{frame}
-\begin{frame}
-\frametitle{Implementation - Gyroscope}
+\vspace{-15px}
 \begin{itemize}
 	\item Axis control register possible combination of value
 \end{itemize}
+\vspace{-10px}
 \begin{figure}[!ht]
-	\includegraphics[width=0.88\textwidth]{{"img/table5"}.png}
+	\includegraphics[width=0.68\textwidth]{{"img/table5"}.png}
 \end{figure}
 \end{frame}
+
 \end{document}
