--- a/latex/presentation.tex
+++ b/latex/presentation.tex
@@ -154,6 +154,7 @@ Open a new \textbf{C/C++ Remote Application} and the code of the program to be d
 \begin{itemize}
 	\item Example of configuration used in the code
 \end{itemize}
+\vspace{-10px}
 \begin{figure}[!ht]
 	\includegraphics[width=0.68\textwidth]{{"img/code1"}.png}
 \end{figure}
@@ -164,15 +165,20 @@ Open a new \textbf{C/C++ Remote Application} and the code of the program to be d
 \begin{itemize}
 	\item Command Register
 \end{itemize}
+\vspace{-10px}
 \begin{figure}[!ht]
 	\includegraphics[width=0.88\textwidth]{{"img/table2"}.png}
 		\includegraphics[width=0.28\textwidth]{{"img/code2"}.png}
 \end{figure}
+\vspace{-15px}
 \begin{itemize}
 	\item Time Register
 \end{itemize}
 \begin{figure}[!ht]
 	\includegraphics[width=0.98\textwidth]{{"img/table3"}.png}
+\end{figure}
+\vspace{-15px}
+	\begin{figure}[!ht]
 	\includegraphics[width=0.28\textwidth]{{"img/code3"}.png}
 \end{figure}
 \end{frame}
@@ -185,9 +191,11 @@ Open a new \textbf{C/C++ Remote Application} and the code of the program to be d
 \begin{figure}[!ht]
 	\includegraphics[width=0.88\textwidth]{{"img/text1"}.png}
 \end{figure}
+\vspace{-15px}
 \begin{itemize}
 	\item Example of configuration used in the code
 \end{itemize}
+\vspace{-15px}
 \begin{figure}[!ht]
 	\includegraphics[width=0.88\textwidth]{{"img/code4"}.png}
 \end{figure}
