--- a/latex/ref.bib
+++ b/latex/ref.bib
@@ -10,4 +10,27 @@
   urldate      = {2018-01-15},
 }
 
+@Manual{bbb,
+  author       = {Ruiz, Mariano and Jiménez, Francisco Javier},
+  title        = {Embedded Linux Systems},
+  year         = {2016},
+  subtitle     = {Using Buildroot for building Embedded Linux Systems (BeagleBone Black)},
+  language     = {English},
+  version      = {1.2},
+  organization = {ETSIS.Telecomunicación – Universidad Politécnica de Madrid},
+  url          = {https://moodle.upm.es/titulaciones/oficiales/pluginfile.php/1182878/mod_resource/content/1/BBBembeddedLinuxSystems6.pdf},
+  urldate      = {2018-01-17},
+}
+
+@Manual{gyro,
+  author   = {STMicroelectronics},
+  title    = {MEMS motion sensor: three-axis digital output gyroscope},
+  year     = {2013},
+  subtitle = {Datasheet - production data},
+  language = {English},
+  version  = {2},
+  url      = {https://www.pololu.com/file/0J731/L3GD20H.pdf},
+  urldate  = {2018-01-17},
+}
+
 @Comment{jabref-meta: databaseType:biblatex;}
