--- a/latex/document.tex
+++ b/latex/document.tex
@@ -295,12 +295,12 @@ First, for cross-compilation we created a workspace location. Inside this worksp
 \begin{figure}[!ht]
 	\centering
 	\begin{subfigure}[b]{0.99\textwidth}
-		\includegraphics[width=0.98\textwidth]{{"img/Screenshot from 2018-01-17 07:06:07"}.png}
+		\includegraphics[width=0.98\textwidth]{{"img/Screenshot from 2018-01-17 07:06:45"}.png}
 		\caption{Includes}
 		\label{fig:includes}
 	\end{subfigure}
 	\begin{subfigure}[b]{0.99\textwidth}
-		\includegraphics[width=0.98\textwidth]{{"img/Screenshot from 2018-01-17 07:06:45"}.png}
+		\includegraphics[width=0.98\textwidth]{{"img/Screenshot from 2018-01-17 07:07:05"}.png}
 		\caption{Libraries}
 		\label{fig:libs}
 	\end{subfigure}
@@ -311,7 +311,7 @@ Once the code was compiled, it was necessary to debug it to be sure that we did 
 	\caption{Remote debugging}
 	\label{fig:ssh}
 	\centering
-	\includegraphics[width=0.98\textwidth]{{"img/Screenshot from 2018-01-17 07:07:05"}.png}
+	\includegraphics[width=0.98\textwidth]{{"img/Screenshot from 2018-01-17 07:06:07"}.png}
 \end{figure}
 
 As it is possible to see there, we set the project name, the IP address of our BBB: 192.168.1.2, the remote path of the directory and application. In addition, we select an Automatic debugging mode and a root as our user profile. Moreover, we set the paths of the gdb and gdb server, which allows connecting our program with a remote GDB via target remote, our BBB. Once the configuration has been completed, we debugged our code. 
@@ -570,7 +570,7 @@ read(file2, datai, 1);
 char data_5 = datai[0];
 
 /*To convert our data and get a int value 
-each each time we multiply by 256 that are going to decal the first bit position 
+each time we multiply by 256 that are going to decal the first bit position 
 to eight  rank to the left so we have 8 bits where we can add data 0
 
 */
